--- a/paterno.html
+++ b/paterno.html
@@ -1,202 +1,44 @@
 <!DOCTYPE html>
 <html lang="it">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Sgomberi Professionali a Paternò | STR Sgomberi - Servizio Gratuito in Cambio di Merce Riutilizzabile</title>
-  <meta name="description" content="Sgomberi gratuiti a Paternò in cambio di merce riutilizzabile. STR Sgomberi opera nel comune del Simeto con servizio professionale e sostenibile. Preventivo gratuito 349 750 0613. Oltre 180 interventi completati." />
-  <meta name="keywords" content="sgomberi Paternò, sgombero Paternò, sgombero gratuito Paternò, sgombero appartamenti Paternò, sgombero case Paternò, sgombero uffici Paternò, merce riutilizzabile Paternò, STR Sgomberi Paternò, trasporti Paternò, sgombero sostenibile Paternò, preventivo sgombero Paternò, ditte sgombero Paternò, sgombero rapido Paternò, sgombero professionale Paternò, sgombero valle del Simeto" />
-  
-  <meta property="og:title" content="Sgomberi Professionali a Paternò | STR Sgomberi" />
-  <meta property="og:description" content="Servizi di sgombero gratuito in cambio di merce riutilizzabile a Paternò. Preventivo gratuito e intervento rapido." />
-  <meta property="og:url" content="https://www.sgomberosicilia.it/paterno.html" />
-  
-  <link rel="canonical" href="https://www.sgomberosicilia.it/paterno.html" />
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800;900&display=swap" rel="stylesheet" />
-  <link rel="stylesheet" href="styles.css" />
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Sgomberi Professionali a Paternò | Sgombero Sicilia</title>
+    <meta name="description" content="Servizi di sgombero professionali a Paternò. Svuotiamo cantine, garage e appartamenti con rapidità e professionalità. Contattaci per un preventivo gratuito.">
+    <link rel="stylesheet" href="styles.css">
+    <style>.hero { min-height: 60vh; } .service-card h3 { font-size: 1.5rem; }</style>
 </head>
 <body>
-  <nav class="navbar">
-    <div class="nav-container">
-      <div class="nav-brand">
-        <img src="public/OIG1-removebg-preview_1_-removebg-preview.png" alt="STR Sgomberi Logo" class="nav-logo" />
-        <span class="nav-title">STR Sgomberi</span>
-      </div>
-
-      <button class="mobile-menu-btn" id="mobile-menu-btn">
-        <span></span>
-        <span></span>
-        <span></span>
-      </button>
-
-      <div class="nav-menu" id="nav-menu">
-        <a href="index.html" class="nav-link">Home</a>
-        <div class="nav-dropdown">
-          <button class="nav-link dropdown-toggle">Servizi
-            <svg class="dropdown-icon" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
-              <polyline points="6,9 12,15 18,9" />
-            </svg>
-          </button>
-          <div class="dropdown-menu">
-            <a href="sgombero-gratuito-catania.html" class="dropdown-item">Sgombero Gratuito</a>
-            <a href="trasporti-catania.html" class="dropdown-item">Trasporti</a>
-          </div>
-        </div>
-        <div class="nav-dropdown">
-          <button class="nav-link dropdown-toggle">Dove Operiamo
-            <svg class="dropdown-icon" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
-              <polyline points="6,9 12,15 18,9" />
-            </svg>
-          </button>
-          <div class="dropdown-menu comuni-menu">
-            <a href="catania.html" class="dropdown-item">Catania</a>
-            <a href="acireale.html" class="dropdown-item">Acireale</a>
-            <a href="giarre.html" class="dropdown-item">Giarre</a>
-            <a href="paterno.html" class="dropdown-item active">Paternò</a>
-            <a href="adrano.html" class="dropdown-item">Adrano</a>
-            <a href="belpasso.html" class="dropdown-item">Belpasso</a>
-            <a href="mascalucia.html" class="dropdown-item">Mascalucia</a>
-            <a href="gravina_di_catania.html" class="dropdown-item">Gravina di Catania</a>
-            <a href="san_giovanni_la_punta.html" class="dropdown-item">San Giovanni la Punta</a>
-            <a href="tremestieri_etneo.html" class="dropdown-item">Tremestieri Etneo</a>
-            <a href="santagata_li_battiati.html" class="dropdown-item">Sant'Agata li Battiati</a>
-            <a href="valverde.html" class="dropdown-item">Valverde</a>
-            <a href="aci_catena.html" class="dropdown-item">Aci Catena</a>
-            <a href="aci_santantonio.html" class="dropdown-item">Aci Sant'Antonio</a>
-            <a href="viagrande.html" class="dropdown-item">Viagrande</a>
-            <a href="zafferana_etnea.html" class="dropdown-item">Zafferana Etnea</a>
-            <a href="nicolosi.html" class="dropdown-item">Nicolosi</a>
-            <a href="pedara.html" class="dropdown-item">Pedara</a>
-            <a href="trecastagni.html" class="dropdown-item">Trecastagni</a>
-            <a href="aci_castello.html" class="dropdown-item">Aci Castello</a>
-            <a href="san_gregorio_di_catania.html" class="dropdown-item">San Gregorio di Catania</a>
-            <a href="camporotondo_etneo.html" class="dropdown-item">Camporotondo Etneo</a>
-          </div>
-        </div>
-        <a href="blog.html" class="nav-link">Blog</a>
-        <a href="chi-siamo.html" class="nav-link">Chi Siamo</a>
-        <a href="faq.html" class="nav-link">FAQ</a>
-        <a href="contatti.html" class="nav-link">Contatti</a>
-      </div>
-
-      <div class="nav-actions">
-        <button class="dark-mode-toggle" id="dark-mode-toggle" aria-label="Attiva/Disattiva modalità scura">
-          <svg class="sun-icon" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
-            <circle cx="12" cy="12" r="5"/>
-            <path d="M12 1v2M12 21v2M4.22 4.22l1.42 1.42M18.36 18.36l1.42 1.42M1 12h2M21 12h2M4.22 19.78l1.42-1.42M18.36 5.64l1.42-1.42"/>
-          </svg>
-          <svg class="moon-icon" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
-            <path d="M21 12.79A9 9 0 1 1 11.21 3 7 7 0 0 0 21 12.79z"/>
-          </svg>
-        </button>
-        <a href="tel:3497500613" class="phone-btn">
-          <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
-            <path d="M22 16.92v3a2 2 0 0 1-2.18 2 19.79 19.79 0 0 1-8.63-3.07 19.5 19.5 0 0 1-6-6 19.79 19.79 0 0 1-3.07-8.67A2 2 0 0 1 4.11 2h3a2 2 0 0 1 2 1.72 12.84 12.84 0 0 0 .7 2.81 2 2 0 0 1-.45 2.11L8.09 9.91a16 16 0 0 0 6 6l1.27-1.27a2 2 0 0 1 2.11-.45 12.84 12.84 0 0 0 2.81.7A2 2 0 0 1 22 16.92z" />
-          </svg>
-          <span>349 750 0613</span>
-        </a>
-        <a href="https://wa.me/393497500613" target="_blank" class="whatsapp-btn">
-          <svg viewBox="0 0 32 32" fill="currentColor" width="24" height="24">
-            <path d="M19.11 17.47c-.3-.15-1.77-.87-2.05-.97-.27-.1-.46-.15-.65.15-.19.3-.75.97-.92 1.17-.17.2-.34.22-.63.07-.3-.15-1.27-.47-2.43-1.5-.9-.8-1.5-1.78-1.67-2.08-.17-.3-.02-.46.13-.61.13-.13.3-.34.45-.5.15-.17.2-.3.3-.5.1-.2.05-.37 0-.52-.07-.15-.65-1.55-.9-2.13-.24-.58-.48-.5-.65-.5h-.56c-.2 0-.52.07-.8.37s-1.05 1.02-1.05 2.5 1.07 2.9 1.22 3.1c.15.2 2.1 3.2 5.1 4.48.71.31 1.26.5 1.7.63.71.23 1.36.2 1.87.13.57-.08 1.77-.72 2.02-1.42.25-.7.25-1.3.17-1.42-.07-.13-.27-.2-.57-.35zM16 3a13 13 0 0 0-11.34 19.43L3 29l6.75-1.77A13 13 0 1 0 16 3zm0 23.4c-1.96 0-3.79-.57-5.33-1.55l-.38-.24-4.01 1.05 1.07-3.91-.25-.4a10.42 10.42 0 1 1 8.9 4.05z" />
-          </svg>
-        </a>
-      </div>
-    </div>
-  </nav>
-
-  <main>
-    <section class="hero hero-etna-improved">
-      <div class="hero-content">
-        <h1>Sgomberi Professionali a Paternò</h1>
-        <p>Servizi di sgombero gratuito in cambio di merce riutilizzabile nella valle del Simeto</p>
-      </div>
-    </section>
-
-    <section class="section section-light">
-      <div class="container">
-        <h2>STR Sgomberi a Paternò: Esperti della Valle del Simeto</h2>
-        <p>Con oltre 180 interventi completati a Paternò, siamo specializzati in sgomberi gratuiti in cambio di merce riutilizzabile. La nostra esperienza nella valle del Simeto ci permette di operare efficacemente in ogni zona del comune, dal centro storico alle aree industriali.</p>
-        
-        <div class="paterno-zones">
-          <h3>Zone di Paternò Servite</h3>
-          <div class="zones-grid">
-            <div class="zone-item">
-              <h4>🏰 Centro Storico</h4>
-              <p>Castello Normanno, centro paese, zone storiche - Esperienza in edifici d'epoca</p>
+    <div class="background--blobs"><div class="blob"></div><div class="blob"></div><div class="blob"></div></div>
+    <div id="navbar-container"></div>
+    <main>
+        <section class="hero">
+            <div class="hero-content">
+                <h1 class="hero-title">Sgomberi a Paternò</h1>
+                <p class="hero-subtitle">Servizi rapidi e professionali per liberare i tuoi spazi nella valle del Simeto.</p>
+                <div class="cta-buttons">
+                    <a href="tel:3497500613" class="btn btn-primary glass-ui">Chiama Ora</a>
+                    <a href="contatti.html" class="btn btn-secondary glass-ui">Preventivo Online</a>
+                </div>
             </div>
-            <div class="zone-item">
-              <h4>🏭 Zona Industriale</h4>
-              <p>Area industriale, magazzini, capannoni - Sgomberi aziendali specializzati</p>
-            </div>
-            <div class="zone-item">
-              <h4>🏘️ Zone Residenziali</h4>
-              <p>Quartieri moderni, villette, condomini - Sgomberi abitazioni private</p>
-            </div>
-            <div class="zone-item">
-              <h4>🌾 Zone Agricole</h4>
-              <p>Aziende agricole, depositi rurali, magazzini agricoli</p>
-            </div>
-          </div>
-        </div>
-
-        <div class="paterno-services">
-          <h3>I Nostri Servizi a Paternò</h3>
-          <ul class="services-list">
-            <li><strong>Sgombero gratuito appartamenti</strong> - In cambio di merce riutilizzabile</li>
-            <li><strong>Sgombero aziende e industrie</strong> - Magazzini, capannoni, uffici</li>
-            <li><strong>Sgombero locali commerciali</strong> - Negozi, attività commerciali</li>
-            <li><strong>Sgombero cantine e soffitte</strong> - Recupero spazi inutilizzati</li>
-            <li><strong>Ritiro mobili usati</strong> - Valutazione e ritiro oggetti di valore</li>
-            <li><strong>Trasporti valle del Simeto</strong> - Servizi di trasporto specializzati</li>
-          </ul>
-        </div>
-
-        <div class="paterno-stats">
-          <h3>I Nostri Numeri a Paternò</h3>
-          <div class="stats-grid">
-            <div class="stat-item">
-              <div class="stat-number">180+</div>
-              <div class="stat-label">Interventi a Paternò</div>
-            </div>
-            <div class="stat-item">
-              <div class="stat-number">78%</div>
-              <div class="stat-label">Sgomberi Gratuiti</div>
-            </div>
-            <div class="stat-item">
-              <div class="stat-number">24h</div>
-              <div class="stat-label">Tempo Sopralluogo</div>
-            </div>
-            <div class="stat-item">
-              <div class="stat-number">100%</div>
-              <div class="stat-label">Soddisfazione Clienti</div>
-            </div>
-          </div>
-        </div>
-
-        <section class="contact-section">
-          <h3>Contattaci per Sgombero Gratuito a Paternò</h3>
-          <p>Richiedi una valutazione gratuita per il tuo immobile a Paternò. Sopralluogo entro 24 ore in qualsiasi zona del comune, dal centro alle aree industriali.</p>
-          <div class="cta-buttons">
-            <a href="tel:3497500613" class="btn btn-primary">Chiama: 349 750 0613</a>
-            <a href="https://wa.me/393497500613" target="_blank" class="btn btn-secondary">WhatsApp</a>
-          </div>
-          <p>Email: <a href="mailto:info@sgomberi-paterno.it">info@sgomberi-paterno.it</a></p>
-          <p><a href="https://sgomberocatania.it/sgomberi-paterno" target="_blank" rel="noopener">Approfondisci i nostri servizi a Paternò</a></p>
         </section>
-      </div>
-    </section>
-  </main>
-
-  <footer class="footer">
-    <div class="footer-container">
-      <div class="footer-brand">
-        <img src="public/OIG1-removebg-preview_1_-removebg-preview.png" alt="STR Sgomberi Logo" class="footer-logo" />
-        <h3>STR Sgomberi Paternò</h3>
-        <p>Sgomberi professionali nella valle del Simeto a Paternò. Servizio gratuito in cambio di merce riutilizzabile. <a href="index.html">Torna alla Home</a> | <a href="https://sgomberocatania.it" target="_blank" rel="noopener">Maggiori informazioni</a></p>
-      </div>
-    </div>
-  </footer>
-
-  <script src="script.js"></script>
+        <section class="section">
+            <div class="container">
+                <h2>I Nostri Servizi a Paternò</h2>
+                <p>Offriamo soluzioni complete per ogni esigenza di sgombero a Paternò e nelle zone limitrofe.</p>
+                <div class="services-grid">
+                    <div class="service-card glass-ui"><h3>🏠 Sgombero Abitazioni</h3><p>Svuotiamo appartamenti, case indipendenti e ville, gestendo ogni fase con cura.</p></div>
+                    <div class="service-card glass-ui"><h3>📦 Sgombero Cantine e Garage</h3><p>Liberiamo i tuoi spazi accessori da oggetti accumulati, recuperando aree preziose.</p></div>
+                    <div class="service-card glass-ui"><h3>♻️ Ritiro e Smaltimento</h3><p>Gestiamo il ritiro di mobili usati e lo smaltimento ecologico dei rifiuti ingombranti.</p></div>
+                </div>
+            </div>
+        </section>
+    </main>
+    <div id="footer-container"></div>
+    <script src="script.js"></script>
+    <script>
+        fetch('nav.html').then(response => response.text()).then(data => document.getElementById('navbar-container').innerHTML = data);
+        fetch('footer.html').then(response => response.text()).then(data => document.getElementById('footer-container').innerHTML = data);
+    </script>
 </body>
 </html>
